Fix cobweb layout shift
This changes the media query so that the layout
is based on pixels instead of orientation.

--- a/main.css
+++ b/main.css
@@ -199,7 +199,7 @@ body {
   }
 }
 
-@media (orientation: portrait) {
+@media (max-width: 1000px) {
   .container {
     margin-left: 10px;
     margin-right: 10px;
@@ -222,7 +222,7 @@ body {
   }
 
   #left-image {
-    max-height: 300px;
+    max-height: 450px;
     order: 1;
   }
 
